7장 내용 이해 완료